создание html макета для резюме

--- a/html-css-lesson-1/index.html
+++ b/html-css-lesson-1/index.html
@@ -8,6 +8,49 @@
     <link rel="stylesheet" href="">
 </head>
 <body>
+    <div class="wrapper">
+        <div class="container">
 
+            <div class="main">
+
+                <div class="main__img">
+                    <div class="avatar">
+                        <img src="" alt="" class="avatar__foto">
+                    </div>
+                </div>
+
+                <div class="main__contacts">
+                    <div class="contacts">
+                        <div class="contacts__name">Мария Терентьева</div>
+                        <div class="contacts__role">Оператор call-центра</div>
+
+                        <ul class="contacts__likks">
+                            <li class="contacts__item">
+                                <span class="contacts__title">Почта Sigma</span>
+                                <a href="" class="contacts__link"></a>
+                            </li>
+
+                            <li class="contacts__item">
+                                <span class="contacts__title">Почта Alpha</span>
+                                <a href="" class="contacts__link"></a>
+                            </li>
+
+                            <li class="contacts__item">
+                                <span class="contacts__title">Имя в Telegram</span>
+                                <a href="" class="contacts__link"></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="main__details">
+                    <p class="paragraph"></p>
+                    <p class="paragraph"></p>
+                    <p class="paragraph"></p>
+                </div>
+            </div>
+        </div>
+    </div>
+      
 </body>
 </html>
