Изменение блока main__details

--- a/html-css-lesson-1/index.html
+++ b/html-css-lesson-1/index.html
@@ -44,10 +44,13 @@
                 </div>
 
                 <div class="main__details">
-                    <p class="paragraph"></p>
-                    <p class="paragraph"></p>
-                    <p class="paragraph"></p>
+                    <div class="paragraph">
+                        <p class="paragraph__first"></p>
+                        <p class="paragraph__second"></p>
+                        <p class="paragraph__last"></p>
+                    </div>
                 </div>
+                
             </div>
         </div>
     </div>
