Изменения в html и добавление css

--- a/html-css-lesson-1/index.html
+++ b/html-css-lesson-1/index.html
@@ -5,39 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="wrapper">
         <div class="container">
 
-            <div class="main">
+            <div class="mainblock">
 
-                <div class="main__img">
+                <div class="mainblock__img">
                     <div class="avatar">
-                        <img src="" alt="" class="avatar__foto">
+                        <img src="./avatar.jpg" alt="" class="avatar__foto">
                     </div>
                 </div>
 
-                <div class="main__contacts">
+                <div class="mainblock__contacts">
                     <div class="contacts">
                         <div class="contacts__name">Мария Терентьева</div>
                         <div class="contacts__role">Оператор call-центра</div>
 
-                        <ul class="contacts__likks">
+                        <ul class="contacts__links">
                             <li class="contacts__item">
-                                <span class="contacts__title">Почта Sigma</span>
-                                <a href="" class="contacts__link"></a>
+                                <span class="contacts__title">Инстаграм</span>
+                                <a href="https://www.instagram.com/pmsgng/" class="contacts__link">pmsgng</a>
                             </li>
 
-                            <li class="contacts__item">
-                                <span class="contacts__title">Почта Alpha</span>
-                                <a href="" class="contacts__link"></a>
-                            </li>
+                           
 
                             <li class="contacts__item">
                                 <span class="contacts__title">Имя в Telegram</span>
-                                <a href="" class="contacts__link"></a>
+                                <a href="https://t.me/pmsgng" class="contacts__link">pmsgng</a>
                             </li>
                         </ul>
                     </div>
@@ -45,9 +42,9 @@
 
                 <div class="main__details">
                     <div class="paragraph">
-                        <p class="paragraph__first"></p>
-                        <p class="paragraph__second"></p>
-                        <p class="paragraph__last"></p>
+                        <p class="paragraph__first">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam corrupti ullam obcaecati tenetur illum placeat voluptatum magnam quod officia velit unde expedita fugit, id amet eos, explicabo ut enim aliquam?</p>
+                        <p class="paragraph__second">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo obcaecati asperiores reprehenderit, libero delectus laborum? Ad ab nostrum pariatur corporis cumque nesciunt dolorem velit aspernatur rem incidunt. Blanditiis, quod quaerat.</p>
+                        <p class="paragraph__last">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus eius ullam est, magni doloremque quasi iure, cum id obcaecati quia distinctio dolorem culpa necessitatibus, error harum expedita aliquid quidem rem!</p>
                     </div>
                 </div>
                 
