switch-avater effect

--- a/html-css-lesson-1/index.html
+++ b/html-css-lesson-1/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" person="width=device-width">
   <title>Студент Цой Владислав</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Indie+Flower&family=Luckiest+Guy&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="#">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
@@ -13,14 +16,15 @@
 <div class="person">
   <div class="person__info">
     <div class="avatar">
-      <a href="./SBER.jpg"><img class="avatar__picture" src="./SBER.jpg" alt="ErrorImg"></a>
+      <a href="#"><img class="avatar__picture front-pick" src="./SBER.jpg" alt="ErrorImg"></a>
+      <a href="#"><img class="avatar__picture back-pick" src="./backfoto.jpg" alt=""></a>
     </div>
 
     <div class="person__contacts">
 
       <div class="contacts">
-        <div class="contacts__name">Цой Владислав</div>
-        <div class="contacts__role">Клиентский менеджер</div>
+        <div class="contacts__name"><span class="heading">Цой Владислав</span></div>
+        <div class="contacts__role"><span class="heading">Клиентский менеджер</span> </div>
 
         <ul class="contacts__links">
           <li class="contacts__item"><span class="contacts__title">Моб. тел</span>
@@ -47,6 +51,7 @@
     </p>
   </div>
 </div>
+
 
 </body>
 </html>
